Fix newline in title

--- a/demo.tex
+++ b/demo.tex
@@ -18,7 +18,7 @@
 \renewcommand{\beamertitlecolor}{title}
 
 
-\title{How my first Network Automation project failed (and is still in production)}
+\title[How my first Network Automation project failed (and is still in production)]{How my first Network Automation project failed \\ (and is still in production)}
 \author{Urs Baumann}
 \institute{Swisscom}
 \date{29.05.2024}
