--- a/presentation.tex
+++ b/presentation.tex
@@ -1,3 +1,5 @@
+% !TEX program = xelatex
+
 \documentclass[aspectratio=169]{beamer}
 % Template: https://www.overleaf.com/latex/templates/pure-minimalistic-a-truly-minimalistic-and-configurable-beamer-theme/hbvwphdxcbhf
 %%%% Theme settings %%%%
@@ -18,6 +20,10 @@
 \renewcommand{\beamertitlecolor}{title}
 
 
+\usepackage{listings}
+\usepackage{minted}
+
+
 \title[How my first Network Automation project failed (and is still in production)]{How my first Network Automation project failed \\ (and is still in production)}
 \author{Urs Baumann}
 \institute{Swisscom}
@@ -27,9 +33,78 @@
 
 \frame{\titlepage}
 
-\begin{frame}
-  \frametitle{Sample frame title}
-  This is some text in the first frame. This is some text in the first frame. This is some text in the first frame.
+% \begin{frame}
+%   \frametitle{Urs Baumann}
+%   This is some text in the first frame. This is some text in the first frame. This is some text in the first frame.
+% \end{frame}
+
+
+\begin{frame}[fragile]
+  \frametitle{Urs Baumann}
+
+  \begin{minted}[fontsize=\small]{python}
+>>> qr = QRCode()
+>>> qr.add_data("https://www.linkedin.com/in/ubaumannch")
+>>> qr.print_ascii()
+  \end{minted}
+  \begin{minted}[fontsize=\tiny]{text}
+      █▀▀▀▀▀█ ▄ █▄▄ ▀█ ▀██▄ █▀▀▀▀▀█
+      █ ███ █  ▀▄██ ▄▀  ▄█▀ █ ███ █
+      █ ▀▀▀ █ ▀▀▄ ▄█▀█ ███  █ ▀▀▀ █
+      ▀▀▀▀▀▀▀ ▀ █▄▀▄▀ █▄█ █ ▀▀▀▀▀▀▀
+      ▀ █▄▀▄▀  █▀ ▀▀▀▀█▀▀▀▀▄▄ ▀▄ ▀▄
+      ▄▀▀▄ ▄▀███▄█▄█▄▄ █▄ ██  ▄ ▀█▀
+      ▀█▄▄▄ ▀▄ ▄█▄▀ ▀ █▀ ▀███▄ █ ▀█
+      ▄██ █ ▀█ ▄▄▀▀▀ ▄▄▄█▄   ▀ █ █▀
+      ▀▀█▄▀ ▀▀   ▄█▄ ▀█▀ ▀███▀ █▄▀█
+      ▀▄▄█▄▀▀ ▀▄   ▄█▄▄█ ▄██▄▀ ▄ █▀
+      ▀  ▀ ▀▀ █▄██  █ ▄▀▀▄█▀▀▀█ ▄▄▄
+      █▀▀▀▀▀█  ▄▀▄▀▀ ▄ █▄▀█ ▀ ██ ▀█
+      █ ███ █ ▀██▀▀▄  ██▄ ▀▀▀▀█ ▄██
+      █ ▀▀▀ █ ▀ ▄▄█ █ ▀▄▄██▄▄▀█▀ ▄▀
+      ▀▀▀▀▀▀▀ ▀▀ ▀▀▀▀ ▀▀ ▀▀▀ ▀▀▀ ▀▀
+  \end{minted}
 \end{frame}
+
+
+% \begin{frame}[fragile]
+%   \begin{columns}
+%     \begin{column}{0.3\textwidth}
+%       \begin{minted}{yaml}
+% name: sw01
+% domain_name: lab.ins
+% syslog: 10.10.0.11
+% interfaces:
+% - Loopback0
+% - Mgmt0/0
+% - GigabitEthernet1/0/1
+% bgp:
+% asn: 65000
+% \end{minted}
+%     \end{column}
+%     \begin{column}{0.3\textwidth}
+
+%       \begin{minted}{django}
+% !
+% ! version 17
+% !
+% hostname {{ name }}
+% ip domain name {{ domain_name }}
+% logging server {{ syslog }}
+% !
+% {% for nic in interfaces %}
+% interface {{ nic }}
+% no shutdown
+% !
+% {% endfor %}
+% !
+% {% if bgp %}
+% router bgp {{ bgp.asn }}
+% {% endif %}
+% \end{minted}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
+
 
 \end{document}
