Add background image to titlepage

--- a/presentation.tex
+++ b/presentation.tex
@@ -31,7 +31,15 @@
 
 \begin{document}
 
+
+{
+% set background image for first page
+\setbeamertemplate{background}
+{
+  \includegraphics[height=\paperheight]{images/AutoCon_0-108.jpg}
+}
 \frame{\titlepage}
+}
 
 % \begin{frame}
 %   \frametitle{Urs Baumann}
