Add architecture drawing

--- a/presentation.tex
+++ b/presentation.tex
@@ -310,7 +310,10 @@ label_print:
 
 \begin{frame}{Architecture}
 
-  ToDo: Create a diagram of the 17 docker containers the solution needs now
+  % https://excalidraw.com/#json=S7EEmlCgKVvh3Ombo-oxP,59CqaU7ubo5Bgl90OKOIbA
+  \begin{figure}
+    \includegraphics[height = 0.8\textheight]{images/architecture.png}
+  \end{figure}
 
 \end{frame}
 
