--- a/presentation.tex
+++ b/presentation.tex
@@ -262,15 +262,15 @@ label_print:
 \note{Was one of my favorite features. Depending on what variables are defined a form was created with list and dict support as well as default value support.
   Was not used and is dead code with dependencies to libraries now. Yes, I should have removed it again from the code base.}
 
-\begin{frame}{''Emergancy'' OS upgrade}
-  We hit a dot1 bug and need to upgrade 5000 switches ASAP. \\ Could the ''Staging Robot'' do that?
+\begin{frame}{''Emergency'' OS upgrade}
+  We hit a dot1x bug and need to upgrade 5000 switches ASAP. \\ Could the ''Staging Robot'' do that?
   \begin{flushright}
     \underline{Customer A} (2017)
   \end{flushright}
 
   \begin{itemize}
     \item Own implementation of Plug\&Play
-    \item UI witch CSV export/import so select a time window
+    \item UI with CSV export/import to select a time window
     \item Slow start
   \end{itemize}
 \end{frame}
@@ -368,7 +368,7 @@ label_print:
 \end{frame}
 
 \note{At this time I was in another internal team but still the main know-how owner and product owner. We had long discussions about using an existing workflow engine or not.
-  The software engineering them ended up implementing a simple workflow engine by themself.
+  The software engineering team ended up implementing a simple workflow engine by themeselves.
   Nice Object-oriented solution. Drawback: only a software developer can extend it. Would a normal do it? Not sure. I was wrong by Salt so maybe I am wrong here too?}
 
 
