Add why has it failed

--- a/presentation.tex
+++ b/presentation.tex
@@ -443,4 +443,18 @@ label_print:
 
 \note{This is also not final yet. Want to have some more meat.}
 
+\begin{frame}{Why do I say the project has failed?}
+
+  \begin{vfilleditems}
+    \item No direct vendor locking but engineer locking
+    \item No or outdated documentation
+    \item SaltStack is a central component and hard to replace/update
+    \item Settings are in many different locations (because of quick wins)
+    \item Project had multiple contributors but only one has the global view
+  \end{vfilleditems}
+
+\end{frame}
+
+\note{This is also not final yet. Want to have some more meat.}
+
 \end{document}
